SERVER-66222 Retryable transactions should reject multi writes with an initialized statement id

(cherry picked from commit 883238375b56d7a4a11f48583a5f79a5f7192d87)